--- a/src/module/detail/detail.html
+++ b/src/module/detail/detail.html
@@ -57,10 +57,10 @@
               <td>{{item.payChargeSn}}</td>
               <td><b class="mr5">+</b>{{item.revenue}}</td>
               <td><b class="mr5">-</b>{{item.cost}}</td>
-              <td>{{item.type}}</td>
-              <td>{{item.verifyResult}}</td>
+              <td><p v-if="item.type === 1">在线支付</p><p v-else-if="item.type === 2">交易退款</p><p v-else-if="item.type === 3">手续费</p></td>
+              <td><p v-if="item.verifyResult === 1">一致</p><p v-else-if="item.verifyResult === 0">不一致</p><p v-else>无</p></td>
               <td class="txtpos-l" v-if="!!item.verifyResult">{{item.reason}}</td>
-              <td class="handleConf" v-else><span>手动确认</span></td>
+              <td class="handleConf" v-else><span @click="handComfirmEvent">手动确认</span></td>
             </tr>
           </table>
           <pagination v-if="detailTotal > 0" @getnewpage="getBillNewPage" :total-items="detailTotal" :page-size="pageSize"></pagination>
@@ -81,12 +81,12 @@
             </tr>
             <tr v-for="item in unCheckedList">
               <td>{{item.payChargeSn}}</td>
-              <td><b class="mr5">+</b>{{item.revenue}}</td>
-              <td><b class="mr5">-</b>{{item.cost}}</td>
-              <td>{{item.type}}</td>
-              <td>{{item.verifyResult}}</td>
+              <td><b class="mr5">+</b>{{item.chargeAmount}}</td>
+              <td><b class="mr5">-</b>{{item.refundAmount}}</td>
+              <td><p v-if="item.type === 1">在线支付</p><p v-else-if="item.type === 2">交易退款</p><p v-else-if="item.type === 3">手续费</p></td>
+              <td><p v-if="item.verifyResult === 1">一致</p><p v-else-if="item.verifyResult === 0">不一致</p><p v-else>无</p></td>
               <td class="txtpos-l" v-if="!!item.verifyResult">{{item.reason}}</td>
-              <td class="handleConf" v-else><span>手动确认</span></td>
+              <td class="handleConf" v-else><span @click="handComfirmEvent">手动确认</span></td>
             </tr>
           </table>
           <pagination v-if="uncheckTotal > 0" @getnewpage="getUncheckNewPage" :total-items="uncheckTotal" :page-size="pageSize"></pagination>
