--- a/src/module/index/index.html
+++ b/src/module/index/index.html
@@ -34,20 +34,20 @@
                     <ul v-show="isTabshow"><!-- 账单状态 -->
                         <li class="s-time clearfix mr30 selectorWrap">
                             <label>时间:</label>
-                            <selector extra-class="selectStya mr10" def-html="2017年" :def-val="byear" select-type="tyYear" select-mean="byear" @chooseopt="handledata"></selector>
-                            <selector extra-class="selectStya" def-html="1月" def-val="01" select-type="tyMonth" select-mean="bmonth" @chooseopt="handledata"></selector>
+                            <selector class="selectStya mr10" default-html="2017年" :default-val="byear" select-type="year" select-mean="byear" @chooseopt="handledata"></selector>
+                            <selector class="selectStya" default-html="1月" default-val="01" select-type="month" select-mean="bmonth" @chooseopt="handledata"></selector>
                             <span class="mr5 ml5">-</span>
-                            <selector extra-class="selectStya mr10" def-html="2017年" :def-val="eyear" select-type="tyYear" select-mean="eyear" @chooseopt="handledata"></selector>
-                            <selector extra-class="selectStya" def-html="1月" def-val="01" select-type="tyMonth" select-mean="emonth" @chooseopt="handledata"></selector>
+                            <selector class="selectStya mr10" default-html="2017年" :default-val="eyear" select-type="year" select-mean="eyear" @chooseopt="handledata"></selector>
+                            <selector class="selectStya" default-html="1月" default-val="01" select-type="month" select-mean="emonth" @chooseopt="handledata"></selector>
                         </li>
                         
                         <li class="s-status clearfix selectorWrap" v-show="isTabshow">
                             <label>账单状态:</label>
-                            <selector extra-class="selectStyc" def-html="全部" :def-val="billStatus" select-type="tyBillStatus" select-mean="billStatus" @chooseopt="handledata"></selector>
+                            <selector class="selectStyc" default-html="全部" :default-val="billStatus" select-type="status" select-mean="billStatus" @chooseopt="handledata"></selector>
                         </li>
                         <li class="s-payway clearfix mr20 selectorWrap" v-show="isTabshow">
                             <label>支付渠道:</label>
-                             <selector extra-class="selectStyc" def-html="全部" :def-val="channel" select-type="tyChannel" select-mean="channel" need-total="yes" Bo @chooseopt="handledata" @sendlists="receiveListEvent"></selector>
+                             <selector class="selectStyc" default-html="全部" :default-val="channel" select-type="channel" select-mean="channel" need-total="yes" Bo @chooseopt="handledata" @sendlists="receiveListEvent"></selector>
                         </li>
                         <li class="s-account clearfix">
                             <label>支付账号:</label>
@@ -63,19 +63,19 @@
                     <ul v-show="!isTabshow"><!-- 支付渠道 -->
                         <li class="s-time clearfix mr30 selectorWrap">
                             <label>时间:</label>
-                            <selector extra-class="selectStya mr10" def-html="2017年" :def-val="byear" select-type="tyYear" select-mean="byear" @chooseopt="handledata"></selector>
-                            <selector extra-class="selectStya" def-html="1月" def-val="01" select-type="tyMonth" select-mean="bmonth" @chooseopt="handledata"></selector>
+                            <selector class="selectStya mr10" default-html="2017年" :default-val="byear" select-type="year" select-mean="byear" @chooseopt="handledata"></selector>
+                            <selector class="selectStya" default-html="1月" default-val="01" select-type="month" select-mean="bmonth" @chooseopt="handledata"></selector>
                             <span class="mr5 ml5">-</span>
-                            <selector extra-class="selectStya mr10" def-html="2017年" :def-val="eyear" select-type="tyYear" select-mean="eyear" @chooseopt="handledata"></selector>
-                            <selector extra-class="selectStya" def-html="1月" def-val="01" select-type="tyMonth" select-mean="emonth" @chooseopt="handledata"></selector>
+                            <selector class="selectStya mr10" default-html="2017年" :default-val="eyear" select-type="year" select-mean="eyear" @chooseopt="handledata"></selector>
+                            <selector class="selectStya" default-html="1月" default-val="01" select-type="month" select-mean="emonth" @chooseopt="handledata"></selector>
                         </li>
                         <li class="s-status clearfix selectorWrap" v-show="!isTabshow">
                             <label>对账状态:</label>
-                             <selector extra-class="selectStyc" def-html="全部" :def-val="billStatus" select-type="tyCheckStatus" select-mean="billStatus" @chooseopt="handledata"></selector>
+                             <selector class="selectStyc" default-html="全部" :default-val="billStatus" select-type="status" select-mean="billStatus" @chooseopt="handledata"></selector>
                         </li>
                         <li class="s-payway clearfix mr20 selectorWrap">
                             <label>支付渠道:</label>
-                             <selector extra-class="selectStyc" def-html="全部" :def-val="channel" select-type="tyChannel" select-mean="channel" need-total="yes" @chooseopt="handledata" @sendlists="receiveListEvent"></selector>
+                             <selector class="selectStyc" default-html="全部" :default-val="channel" select-type="channel" select-mean="channel" need-total="yes" @chooseopt="handledata" @sendlists="receiveListEvent"></selector>
                         </li>
                         <li class="s-account clearfix">
                             <label>支付账号:</label>
@@ -109,13 +109,13 @@
                                     <th>操作</th>
                                 </tr>
                                 <tr class="nocheckitem" v-for="item in newResultListBill">
-                                    <td class="w180 txtpos-l"><p v-if="item.channel === 1">支付宝_{{item.accountName}}_{{item.billTime}}</p><p v-else-if="item.channel === 2">微信_{{item.accountName}}_{{item.billTime}}</p><p v-else-if="item.channel === 3">财付通_{{item.accountName}}_{{item.billTime}}</p><p v-else>{{item.channel}}_{{item.accountName}}_{{item.billTime}}</p></td>
-                                    <td class="w90"><p v-if="item.channel === 1">支付宝</p><p v-else-if="item.channel === 2">微信</p><p v-else-if="item.channel === 3">财付通</p><p v-else>{{item.channel}}</p></td>
+                                    <td class="w180 txtpos-l">{{item.fileName}}</td>
+                                    <td class="w90">{{item.channelName}}</td>
                                     <td class="w140 txtpos-l">{{item.accountName}}</td>
                                     <td class="w90">{{item.billTime}}</td>
                                     <td class="w90 hlight"><p v-if="item.billStatus === 1">对账中</p><p class="c00C651" v-else-if="item.billStatus === 2">对账通过</p><p v-else-if="item.billStatus === 3">对账未通过</p><p class="c666" v-else-if="item.billStatus === 4">已确认</p><p v-else-if="item.billStatus === -1">对账失败</p><p v-else-if="item.billStatus === 0">未对账</p></td>
                                     <td class="w90">{{item.operator}}</td>
-                                    <td class="w160">{{item.unixtime}}</td>
+                                    <td class="w160">{{item.unixTime}}</td>
                                     <td class="w150 operatecheck"><span  v-if="item.billStatus === 0 || item.billStatus === -1 || item.billStatus === 3" @click="startCheckBtn(item.id)">对账</span></td>
                                 </tr>
                             </table>
@@ -142,13 +142,13 @@
                                     <th>操作</th>
                                 </tr>
                                 <tr class="nocheckitem" v-for="item in newresultListCheck">
-                                    <td class="w180 txtpos-l"><p v-if="item.channel === 1">支付宝_{{item.accountName}}_{{item.billTime}}</p><p v-else-if="item.channel === 2">微信_{{item.accountName}}_{{item.billTime}}</p><p v-else-if="item.channel === 3">财付通_{{item.accountName}}_{{item.billTime}}</p><p v-else>{{item.channel}}_{{item.accountName}}_{{item.billTime}}</p></td>
-                                    <td class="w90"><p v-if="item.channel === 1">支付宝</p><p v-else-if="item.channel === 2">微信</p><p v-else-if="item.channel === 3">财付通</p><p v-else>{{item.channel}}</p></td>
+                                    <td class="w180 txtpos-l">{{item.fileName}}</td>
+                                    <td class="w90">{{item.channelName}}</td>
                                     <td class="w140 txtpos-l">{{item.accountName}}</td>
                                     <td class="w90">{{item.billTime}}</td>
                                     <td class="w90 hlight"><p v-if="item.billStatus === 1">对账中</p><p class="c00C651" v-else-if="item.billStatus === 2">对账通过</p><p v-else-if="item.billStatus === 3">对账未通过</p><p class="c666" v-else-if="item.billStatus === 4">已确认</p><p v-else-if="item.billStatus === -1">对账失败</p><p v-else-if="item.billStatus === 0">未对账</p></td>
                                     <td class="w90">{{item.operator}}</td>
-                                    <td class="w160">{{item.unixtime}}</td>
+                                    <td class="w160">{{item.unixTime}}</td>
                                     <td class="w150 operatecheck"><a :href="'/module/detail.html?id=' + item.id + '&' + item.channel + '&' + item.accountName + '&' + item.billTime" target="_blank">详情</a><span v-if="item.billStatus !== 4" @click="confirmCheckBtn(item.id)">确认对账</span></td>
                                 </tr>
                             </table>
